mdapipkg/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Accept_Code_Conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Code Conduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <description>This field is used in process builder &apos;Contact without being a lead&apos; to check the related Account&apos;s record type</description>
        <formula>Account.Record_Type__c</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>This field is used in process builder &apos;Contact without being a lead&apos; to check the related Account&apos;s type</description>
        <formula>Text(Account.Type)</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_On_Behavior_Score__c</fullName>
        <label>Act-On Behavior Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actively_leading_a_business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actively leading a business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address1_Type__c</fullName>
        <label>Address1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Alternate Home</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                    <default>true</default>
                    <label>Business</label>
                </value>
                <value>
                    <fullName>Alternate Business</fullName>
                </value>
                <value>
                    <fullName>Corresponding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address2_Type__c</fullName>
        <label>Address2 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Alternate Home</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Alternate Business</fullName>
                </value>
                <value>
                    <fullName>Corresponding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_Current__c</fullName>
        <formula>IF(MONTH(TODAY())&gt;MONTH(Birthdate),
     YEAR(TODAY())-YEAR(Birthdate),
IF(AND(MONTH(TODAY())=MONTH(Birthdate),DAY(TODAY())&gt;=DAY(Birthdate)),
     YEAR(TODAY())-YEAR(Birthdate),
    (YEAR(TODAY())-YEAR(Birthdate)-1))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Current)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Group__c</fullName>
        <description>Age Group Calculation Formula Field using Contact.Birthdate</description>
        <formula>IF(ISBLANK(Birthdate), &quot;Others&quot;,
IF((TODAY()  -  Birthdate) / 365 &lt; 30, &quot;Ages 29 or Less&quot;,
IF((TODAY()  - Birthdate) / 365 &gt;= 30 &amp;&amp; (TODAY() - Birthdate) / 365 &lt; 36, &quot;Ages 30 - 35&quot;,
IF((TODAY()  - Birthdate) / 365 &gt;= 36 &amp;&amp; (TODAY() - Birthdate) / 365 &lt; 41, &quot;Ages 36 - 40&quot;,
IF((TODAY()  - Birthdate) / 365 &gt;= 41 &amp;&amp; (TODAY() - Birthdate) / 365 &lt; 46, &quot;Ages 41 - 45&quot;,
IF((TODAY()  - Birthdate) / 365 &gt;= 46 &amp;&amp; (TODAY() - Birthdate) / 365 &lt; 50, &quot;Ages 46 - 49&quot;,
IF((TODAY()  - Birthdate) / 365 &gt;= 50 &amp;&amp; (TODAY() - Birthdate) / 365 &lt; 56, &quot;Ages 50 - 55&quot;,
IF((TODAY()  - Birthdate) / 365 &gt;= 56 &amp;&amp; (TODAY() - Birthdate) / 365 &lt; 61, &quot;Ages 56 - 60&quot;,
IF((TODAY()  - Birthdate) / 365 &gt;= 61 &amp;&amp; (TODAY() - Birthdate) / 365 &lt; 69, &quot;Ages 61 - 69&quot;,
IF((TODAY()  - Birthdate) / 365 &gt;= 70, &quot;Ages 70+&quot;, &quot;Others&quot;))))))))))</formula>
        <label>Age Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Next_Fiscal_Year__c</fullName>
        <formula>IF( 
OR( 
AND(Month(Birthdate) &lt; 7, Month( TODAY() ) &lt; 7), 
AND(Month(Birthdate) &gt;= 7, Month( TODAY() ) &gt;= 7)
), 
(Year( TODAY() ) - Year(Birthdate)), 
(Year( TODAY() ) - Year(Birthdate) - 1) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Prev_Fiscal_Year__c</fullName>
        <formula>IF(
    MONTH(TODAY()) &gt;= 7, 
    YEAR(TODAY()) - 1, 
    YEAR(TODAY()) - 2
)
- 
IF(
    MONTH(Birthdate) &gt;= 7,
    YEAR(Birthdate) + 1,
    YEAR(Birthdate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Prev Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Assets_FF__c</fullName>
        <formula>IF(Corporation_Type__c = &quot;Manufacturing&quot;,0, 
IF(Corporation_Type__c = &quot;Agency&quot;,0, 
IF(Corporation_Type__c = &quot;Sales&quot;, 0, 
IF(Corporation_Type__c = &quot;Service&quot;, 0, 
IF(Corporation_Type__c = &quot;Financial&quot;, Dollar_Value__c , 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FF Annual Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Assets__c</fullName>
        <inlineHelpText>If the corporation type is Financial Institution this value is copied over from the Lead Dollar Volume</inlineHelpText>
        <label>Annual Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Fees_FF__c</fullName>
        <formula>IF(Corporation_Type__c = &quot;Manufacturing&quot;,0, 
IF(Corporation_Type__c = &quot;Financial&quot;,0, 
IF(Corporation_Type__c = &quot;Sales&quot;, 0, 
IF(Corporation_Type__c = &quot;Service&quot;, 0, 
IF(Corporation_Type__c = &quot;Agency&quot;, Dollar_Value__c , 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the corporation type is Agency this value is copied over from the Lead Dollar Volume</inlineHelpText>
        <label>FF Annual Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Fees__c</fullName>
        <label>Annual Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_FF__c</fullName>
        <formula>IF(Corporation_Type__c = &quot;Agency&quot;,0,
IF(Corporation_Type__c = &quot;Financial&quot;,0,
IF(Corporation_Type__c = &quot;Sales&quot;, Dollar_Value__c , 
IF(Corporation_Type__c = &quot;Service&quot;, Dollar_Value__c, 
IF(Corporation_Type__c = &quot;Manufacturing&quot;, Dollar_Value__c, 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the corporation type is Sales, Service, or Manufacturing this value is copied over from the Lead Dollar Volume</inlineHelpText>
        <label>FF Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <description>Could automate creation of this record on status change to accepted member for first time. Flow or code? (After Winter 16, flow (bulk).</description>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Access__c</fullName>
        <label>App Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Access</fullName>
                </value>
                <value>
                    <fullName>CFF Forum Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asst_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Asst_First_Name__c</fullName>
        <label>Assistant First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asst_Last_Name__c</fullName>
        <label>Assistant Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asst_Phone_Country_Code__c</fullName>
        <label>Assistant Phone Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asst_Phone_Extension__c</fullName>
        <label>Assistant Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBM__c</fullName>
        <label>BBM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <label>Biography</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Biography_enntered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for functional purpose only. NOT TO  BE ADDED TO PAGE LAYOUTS</description>
        <label>Biography enntered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <description>This field is used in lead mapping. Later a WR is created to populate the standard field with the value in this field</description>
        <inlineHelpText>Enter Birth Date in format DD/MM/YYYY</inlineHelpText>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Learning__c</fullName>
        <inlineHelpText>How valuable are the following Business Learning opportunities offered by YPO?</inlineHelpText>
        <label>Business Learning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Network__c</fullName>
        <label>Business Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apparel Network</fullName>
                </value>
                <value>
                    <fullName>Automotive Network</fullName>
                </value>
                <value>
                    <fullName>Construction Industry Network</fullName>
                </value>
                <value>
                    <fullName>Deal Network</fullName>
                </value>
                <value>
                    <fullName>Digital, Marketing &amp; Media Network</fullName>
                </value>
                <value>
                    <fullName>Doing Business Globally Network</fullName>
                </value>
                <value>
                    <fullName>Doing Business with China Network</fullName>
                </value>
                <value>
                    <fullName>Doing Business with India Network</fullName>
                </value>
                <value>
                    <fullName>Electrical and Electronics Industry Network</fullName>
                </value>
                <value>
                    <fullName>Entertainment Industry Network</fullName>
                </value>
                <value>
                    <fullName>Entrepreneurship and Innovation Network</fullName>
                </value>
                <value>
                    <fullName>Financial Services Network</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage Network</fullName>
                </value>
                <value>
                    <fullName>Franchise Network</fullName>
                </value>
                <value>
                    <fullName>Family Business Network</fullName>
                </value>
                <value>
                    <fullName>Healthcare Industry Network</fullName>
                </value>
                <value>
                    <fullName>Hospitality Network</fullName>
                </value>
                <value>
                    <fullName>Internet and Technology Network</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Excellence Network</fullName>
                </value>
                <value>
                    <fullName>Plastics Network</fullName>
                </value>
                <value>
                    <fullName>Public Companies Network</fullName>
                </value>
                <value>
                    <fullName>Real Estate Industry Network</fullName>
                </value>
                <value>
                    <fullName>Retail Network</fullName>
                </value>
                <value>
                    <fullName>Steel and Metals Network</fullName>
                </value>
                <value>
                    <fullName>Packaging Network</fullName>
                </value>
                <value>
                    <fullName>Women’s International Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Phone_Ext__c</fullName>
        <label>Business Phone Ext.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Profile_Complete__c</fullName>
        <description>Number of attributes on primary business that are complete and factor into profile completion percentage.</description>
        <label>Business Profile Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Scope__c</fullName>
        <label>Business Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Succession__c</fullName>
        <inlineHelpText>How valuable are the following Business Learning opportunities offered by YPO? Succession.</inlineHelpText>
        <label>Business – Succession</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_expand_globally__c</fullName>
        <inlineHelpText>How valuable are the following Business Learning opportunities offered by YPO? Expanding my business globally.</inlineHelpText>
        <label>Business - expand globally</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_improve_revenue_profits__c</fullName>
        <inlineHelpText>How valuable are the following Business Learning opportunities offered by YPO? Learning how to improve revenues and profits for my company.</inlineHelpText>
        <label>Business - improve revenue &amp; profits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_people_in_my_industry__c</fullName>
        <inlineHelpText>How valuable are the following Business Learning opportunities offered by YPO? Meeting people in my industry/areas of interest.</inlineHelpText>
        <label>Business - people in my industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CVent_ID__c</fullName>
        <description>This is the contacts GUID in Cvent</description>
        <label>CVent ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVent_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This shows if this person can add/edit in CVent</inlineHelpText>
        <label>CVent Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Scope__c</fullName>
        <label>Company Scope</label>
        <summaryFilterItems>
            <field>Account_Affiliation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Account_Affiliation__c.Scope_of_Business__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Affiliation__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Consulates__c</fullName>
        <description>Consulates where member has connections</description>
        <label>GOVERNMENT AGENCIES - Consulate/ Embassy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactPositionID__c</fullName>
        <label>ContactPositionID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number_Auto__c</fullName>
        <label>Contact Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <description>Used for YPOI internal recognition</description>
        <label>Contact Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Position_Name__c</fullName>
        <description>This will capture Position Name and will be using in formula field named as &apos;Position&apos; for displaying name with hyper link</description>
        <label>Contact Position Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>Date to Deactivate Contact and User records.</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corporation_Type_Contact__c</fullName>
        <label>Corporation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency-type</fullName>
                </value>
                <value>
                    <fullName>Financial Institution</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporation_Type__c</fullName>
        <label>Corporation Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Network_Account_Affiliations__c</fullName>
        <label>Count of Network Account Affiliations</label>
        <summaryFilterItems>
            <field>Account_Affiliation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Network</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Affiliation__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country_Code_Map__c</fullName>
        <label>Country Code Map</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Business Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Officer_Position__c</fullName>
        <formula>HYPERLINK(&quot;https://cs51.salesforce.com/&quot;&amp;ContactPositionID__c , Contact_Position_Name__c )</formula>
        <inlineHelpText>Link to the Current Officer Record</inlineHelpText>
        <label>Current Officer Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Officer_Status__c</fullName>
        <label>Current Officer Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curriculum__c</fullName>
        <label>Curriculum Topic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business&gt;Strategy and Operations</fullName>
                </value>
                <value>
                    <fullName>Business&gt;International Business</fullName>
                </value>
                <value>
                    <fullName>Business&gt;Inside the Industry</fullName>
                </value>
                <value>
                    <fullName>Business&gt;Leadership Development</fullName>
                </value>
                <value>
                    <fullName>Business&gt;Deal Making</fullName>
                </value>
                <value>
                    <fullName>Business&gt;Innovation</fullName>
                </value>
                <value>
                    <fullName>Personal&gt;Sports &amp; Wellness</fullName>
                </value>
                <value>
                    <fullName>Personal&gt;Personal Development</fullName>
                </value>
                <value>
                    <fullName>Personal&gt;Travel &amp; Adventure</fullName>
                </value>
                <value>
                    <fullName>Personal&gt; Arts &amp; Culture</fullName>
                </value>
                <value>
                    <fullName>Personal&gt;Lifestyle &amp; Identity</fullName>
                </value>
                <value>
                    <fullName>Personal&gt;Food &amp; Wine</fullName>
                </value>
                <value>
                    <fullName>Social Engagement&gt; Community Outreach</fullName>
                </value>
                <value>
                    <fullName>Social Engagement&gt;Sustainable Business</fullName>
                </value>
                <value>
                    <fullName>Social Engagement&gt;Humanitarian Efforts</fullName>
                </value>
                <value>
                    <fullName>Social Engagement&gt;Publ. Policy&amp;Diplomacy</fullName>
                </value>
                <value>
                    <fullName>Social Engagement&gt;Environment &amp; Wildlife</fullName>
                </value>
                <value>
                    <fullName>Social Engagement&gt;Philanthropy</fullName>
                </value>
                <value>
                    <fullName>Family&gt;Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Family&gt;Parent Child</fullName>
                </value>
                <value>
                    <fullName>Family&gt; Youth (Ages 17 and under)</fullName>
                </value>
                <value>
                    <fullName>Family&gt;YNG+ (18-29)</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Memb.&gt;Champion Dev.</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Memb.&gt;Forum Education</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Memb.&gt;Intl.&amp; Reg. Governance</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Memb.&gt;Chapter Gov. Meetings</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Memb.&gt;Chapter Socials/Retreat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cvent_Access_from_Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cvent Access from Exchange?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Last_Grace_Accrued__c</fullName>
        <description>For functional purpose</description>
        <label>Date Last Grace Accrued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Grace_Year_Used__c</fullName>
        <label>Date Last Grace Year Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_M2MX_Request_Email__c</fullName>
        <description>This is so the M2MX team can avoid oversending by utilizing this filter field in the &apos;Search Report&apos;.</description>
        <inlineHelpText>This is populated with the date last M2MX request email was sent.</inlineHelpText>
        <label>Date Last M2MX Request Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Profile_Updated__c</fullName>
        <label>Date Last Profile Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_third_party_verification__c</fullName>
        <description>This will contain date via renewal process builder.</description>
        <label>Date Last third party verification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Welcome_Call__c</fullName>
        <label>Date of Welcome Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <label>Degree Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AAS</fullName>
                </value>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>ACA</fullName>
                </value>
                <value>
                    <fullName>ADVANCED DEGREE</fullName>
                </value>
                <value>
                    <fullName>AMBEP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BBA</fullName>
                </value>
                <value>
                    <fullName>BCOM</fullName>
                </value>
                <value>
                    <fullName>BCOMM</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BES</fullName>
                </value>
                <value>
                    <fullName>BFA</fullName>
                </value>
                <value>
                    <fullName>BGS</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BS/BA</fullName>
                </value>
                <value>
                    <fullName>BSC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CFE</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>CPCU</fullName>
                </value>
                <value>
                    <fullName>CVL</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>DIP</fullName>
                </value>
                <value>
                    <fullName>DOCT</fullName>
                </value>
                <value>
                    <fullName>EDP</fullName>
                </value>
                <value>
                    <fullName>FLDOFSTUDY</fullName>
                </value>
                <value>
                    <fullName>GED</fullName>
                </value>
                <value>
                    <fullName>HBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deprecate_Percentage_Profile_Complete__c</fullName>
        <formula>(IF( Profile_Picture_uploaded__c = True,1,0 ) +
IF( NOT( ISBLANK( Phone )),1,0) +
IF( NOT( ISBLANK(MobilePhone) ),1,0) +
IF( NOT (ISBLANK( Email ) ), 1,0) +
IF( Biography_enntered__c = TRUE,1,0) +
+ IF( OR( AND( Is_Address1_Primary__c = TRUE,NOT( ISBLANK(MailingStreet) ), NOT( ISBLANK( MailingCity ) )), AND( Is_Address2_Primary__c  = TRUE,NOT( ISBLANK( OtherStreet ) ), NOT( ISBLANK( OtherCity ) ))),1,0) +
IF( Education__c &gt; 0,1,0) +
IF( Interest_Count__c &gt; 0,1,0)+
IF( Skills_Expertise_Count__c &gt; 0,1,0)+
IF( Social_Media_Count__c = TRUE,1,0)+
 Business_Profile_Complete__c )/15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deprecate_Percentage Profile Complete</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Disciplinary_Action_Comments__c</fullName>
        <label>Disciplinary Action Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disciplinary_Action_s__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if a disciplinary action has been recorded and fill out the comments in the text area field to the right.</inlineHelpText>
        <label>Disciplinary Action(s)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dollar_Value__c</fullName>
        <label>Dollar Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>